[package]
name = "drawille"
version = "0.3.0"
authors = ["ftxqxd"]
description = "Draw to the terminal using braille characters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ftxqxd/drawille-rs"
homepage = "https://github.com/ftxqxd/drawille-rs"

[lib]
name = "drawille"

[dependencies]
fnv = "1.0.6"
colored = "2.0.0"
